# wahtbot

./: Dockerfile  __main__.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  deployapp.yml  docker-image.yml
app/: __init__.py
app/ping/: __init__.py  views.py
app/portal_tracker/: __init__.py  functions.py  views.py
app/static/: style.css
app/templates/: agregar_egreso.html  agregar_fijo.html  agregar_gasto_fijo.html  agregar_ingreso.html  detalles.html  ingresos.html  inventario.html  portal.html
app/whatsapp/: __init__.py  models.py  views.py
data/: inmuebles.csv
