[tool.poetry]
name = "whatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
twilio = "^9.2.0"
flask = "^3.0.3"
langchain-huggingface = "^0.0.3"
huggingface-hub = "^0.23.4"
transformers = "^4.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
