[tool.poetry]
name = "whatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
twilio = "^9.2.0"
flask = "^3.0.3"
boto3 = "^1.34.144"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
